code block overflow fix

--- a/src/0-base/_typography.scss
+++ b/src/0-base/_typography.scss
@@ -101,6 +101,7 @@ pre {
   font-family: $ff--mono;
   border-radius: ms(1);
   white-space: pre-wrap;
+  word-break: break-all;
   //font-size: 0.8em;
 }
 
